# writer-tools

./: .eslintrc.json  .vscodeignore  README.md  package-lock.json  package.json
api/: pyproject.toml
api/writer_tools/: cli.py  languagemodel.py  requests.py  responses.py  server.py
api/writer_tools/prompts/: generate-conclusion.txt  generate-introduction.txt  system-prompt.txt
extension/: CHANGELOG.md  README.md
extension/src/: extension.ts
src/: api-client.ts  extension.ts
