[tool.poetry]
name = "writer-tools"
version = "0.1.0"
description = "API endpoints for the writer tools extension"
authors = ["Willem Meints"]
license = "MIT"
readme = "README.md"
packages = [{ include = "writer_tools" }]

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.1.0"
fastapi = "^0.108.0"
typer = "^0.9.0"
uvicorn = "^0.25.0"
langchain-openai = "^0.0.2"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.12.1"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
writer-tools = "writer_tools.cli:main"
